--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Ogrenci" asp-action="Create">Ogrenci Ekle</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Kurs" asp-action="Create">Kurslar</a>
+                        </li>
                     </ul>
                 </div>
             </div>
