--- a/Views/Ogrenci/Index.cshtml
+++ b/Views/Ogrenci/Index.cshtml
@@ -8,7 +8,7 @@
 *@
 @{
 }
-<h2>Ogrenci Guncelleme</h2>
+<h2 style="text-align:center">Ogrenci Liste</h2>
 <a href="/Ogrenci/Create" class="btn btn-primary">Ogrenci Ekle</a>
 <table class="table">
     <thead>
@@ -23,9 +23,9 @@
         @foreach(var ogrenci in Model)
         {
             <tr>
-                <td>@ogrenci.OgrenciKimlik</td>
-                <td>@ogrenci.OgrenciAd</td>
-                <td>@ogrenci.OgrenciSoyad</td>
+                <td><b>@ogrenci.OgrenciKimlik</b></td>
+                <td><b>@ogrenci.OgrenciAd</b></td>
+                <td><b>@ogrenci.OgrenciSoyad</b></td>
                 <td>
                     @*burdan gelen id Ogrenci controller icinden edit kismina gidiyor editte
                     eslesen id varsa bunu kontrol edip return ediyor.*@
