--- a/Views/Ogrenci/Edit.cshtml
+++ b/Views/Ogrenci/Edit.cshtml
@@ -1,6 +1,5 @@
-﻿@using KursKayir.Data;
+﻿@using KursKayir.Data
 @model Ogrenci
-
 
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
@@ -8,28 +7,52 @@
 @{
 }
 
-<form asp-controller="Ogrenci" asp-action="Edit" method="post">
-    <input type="hidden" asp-for="OgrenciKimlik" />
-    <div class="mb-3">
-        <label asp-for="OgrenciAd" class="form-label">Ogrenci Ad</label>
-        <input asp-for="OgrenciAd" class="form-control" />
-    </div>
-   
-    <div class="mb-3">
-        <label asp-for="OgrenciSoyad" class="form-label">Ogrenci Soyad</label>
-        <input asp-for="OgrenciSoyad" class="form-control" />
+<div class="row">
+    <div class="col-8">
+        <form asp-controller="Ogrenci" asp-action="Edit" method="post">
+            <input type="hidden" asp-for="OgrenciKimlik" />
+            <div class="mb-3">
+                <label asp-for="OgrenciAd" class="form-label">Ogrenci Ad</label>
+                <input asp-for="OgrenciAd" class="form-control" />
+            </div>
+
+            <div class="mb-3">
+                <label asp-for="OgrenciSoyad" class="form-label">Ogrenci Soyad</label>
+                <input asp-for="OgrenciSoyad" class="form-control" />
+            </div>
+
+            <div class="mb-3">
+                <label asp-for="Eposta" class="form-label">Eposta </label>
+                <input asp-for="Eposta" class="form-control" />
+            </div>
+
+            <div class="mb-3">
+                <label asp-for="Telefon" class="form-label">Telefon </label>
+                <input asp-for="Telefon" class="form-control" />
+            </div>
+
+            <button type="submit" class="btn btn-primary">Kaydet</button>
+
+        </form>
     </div>
 
-    <div class="mb-3">
-        <label asp-for="Eposta" class="form-label">Eposta </label>
-        <input asp-for="Eposta" class="form-control" />
-    </div>
+    <div class="col-4">
+       <h4>Kurslar</h4>
+       <hr />
+      
+            @foreach(var item in Model.KursKayitlari)
+            {
+            <h4><li>@item.Kurs.KursBaslik</li></h4>
+            }
 
-    <div class="mb-3">
-        <label asp-for="Telefon" class="form-label">Telefon </label>
-        <input asp-for="Telefon" class="form-control" />
+     
     </div>
-    
-    <button type="submit" class="btn btn-primary">Kaydet</button>
+</div>
+<style>
+    .col-4 {
+        background-color: rgba(255, 255, 255, 0.5); /* Arka plan rengi, son değer saydamlık (0 ile 1 arasında olmalı) */
+        border-radius: 20px; /* Oval köşeler için kenar yarıçapı */
+        padding: 20px; /* Kutu içeriği ile iç kenar arasındaki boşluk */
+    }
 
-</form>
+</style>
